fix margin jump on slider

--- a/project_tier/static/css/_blocks.scss
+++ b/project_tier/static/css/_blocks.scss
@@ -511,7 +511,7 @@ ul.accordion {
 }
 
 @media(max-width: 1285px) {
-  .split_banner_section:first-of-type {
+  .split_banner_section {
     margin-top: -40px;
   }
 
